# into-farm

./: .gitignore  README.md
AWS-Learning/: README.md  pyproject.toml
AWS-Learning/08-high-availability-and-scalability/: README.md
AWS-Learning/09-RDS-Aurora-Elasticache/: README.md
AWS-Learning/09-RDS-Aurora-Elasticache/scripts/: rds-infra.py
AWS-Learning/10-route-53/: README.md
AWS-Learning/12-amazon-s3/: README.md
FastAPI-Tutorial/: README.md  pyproject.toml  test.db
FastAPI-Tutorial/app/: app.py  db.py  schemas.py  users.py
devops-learning/fastapi-mongo-k8s/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
devops-learning/fastapi-mongo-k8s/app/: config.py  database.py  main.py  models.py
devops-learning/helm-lab/: README.md
devops-learning/interview-prep/labs/day-1/: README.md  crashloop.yml  imagepull.yml  svc-mismatch.yml
devops-learning/interview-prep/labs/day-2/: rbac-lab.yml  readiness-fail.yml
devops-learning/k8s-entry-lab/: README.md
devops-learning/k8s-entry-lab/lab1/: cicd-deployer-binding.yml  deployment-manager-role.yml  nginx-prod-deployment.yml  nginx-staging-deployment.yml
devops-learning/k8s-entry-lab/lab1b/: cluster-monitoring-reader.yml  custom-metrics-viewer.yml  emergency-incident-12345-binding.yml  emergency-responder-clusterrole.yml  infra-admin-binding.yml  infrastructure-admin-clusterrole.yml  platform-engineer-clusterrole.yml  platform-engineer-production-binding.yml  platform-engineer-staging-binding.yml  prometheus-cluster-binding.yml
devops-learning/k8s-entry-lab/lab3/: allow-backend-networkpolicy.yml  backend-api.yml  backend-ingress.yml  crasher-deployment.yml  deny-all-networkpolicy.yml  service-types-demo.yml
devops-learning/terrarform-lab/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
