[project]
name = "aws-learning"
version = "0.1.0"
description = "This is a project in which I'll be learning AWS and their implementations."
authors = [
    {name = "mithologic",email = "devmithologic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.34.0,<2.0.0)",
    "botocore (>=1.34.0,<2.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
moto = "^4.2.0"
boto3-stubs = {version = "^1.34.0", extras = ["essential", "ec2", "s3", "rds", "lambda", "iam", "dynamodb", "cloudformation", "sns", "sqs", "cloudwatch"]}
types-psycopg2 = "^2.9.21.16"
types-pyyaml = "^6.0.12.12"

